<resources>
    <string name="app_name">Voice Up</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="welcome_to_voice_up">Welcome to Voice Up</string>
    <string name="logout">Logout</string>
    <string name="no_post">No post available for now</string>
    <string name="profile_image_of_creator">Profile image of creator</string>
    <string name="post_image">Post image</string>
    <string name="something_went_wrong_with_media">Something went wrong with media</string>
    <string name="add_title">Add Title</string>
    <string name="enter_your_title_here">Enter your title here</string>
    <string name="add_your_image_or_video">Add Your image or video</string>
    <string name="image_post_by_image">Image post by a user</string>
    <string name="image_post_by_video">Video post by a user</string>
    <string name="re_add_media">Re select Media</string>
    <string name="create_your_post">Create your post</string>
    <string name="select_your_file_type">Select your file type?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_a_unique_user_name">Enter a unique user name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string-array name="itemsArray">
        <item>Image</item>
        <item>Video</item>
    </string-array>

</resources>
