<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".post.view.PostActivity">

        <TextView
            android:id="@+id/tv_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_title"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_shape"
            android:hint="@string/enter_your_title_here"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_title" />

        <TextView
            android:id="@+id/tv_post_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_your_image_or_video"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_post_title" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_file"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="5dp"
            android:onClick="onClick"
            android:padding="80dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_file"
            app:srcCompat="@drawable/add_media" />


        <TextView
            android:id="@+id/tv_re_addd_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:padding="16dp"
            android:text="@string/re_add_media"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aciv_file" />


        <Button
            android:id="@+id/btn_create_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="onClick"
            android:background="@color/colorPrimary"
            android:text="@string/create_your_post"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_re_addd_media" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>